added --oe-input-underline mixin

--- a/demo/demo-oe-date-range.html
+++ b/demo/demo-oe-date-range.html
@@ -45,6 +45,9 @@
                 padding-right: 15px;
                 padding-left: 15px;
               }
+              --oe-input-underline: {
+                display: auto;
+              }
             }
           </style>
         </custom-style>
