added dropdown and dialog options to oe-date-range

--- a/demo/demo-oe-date-range.html
+++ b/demo/demo-oe-date-range.html
@@ -51,7 +51,7 @@
             }
           </style>
         </custom-style>
-        <oe-date-range id='demo-1'></oe-date-range>
+        <oe-date-range id='demo-1' dropdown-mode></oe-date-range>
       </template>
     </demo-snippet>
 
@@ -104,6 +104,25 @@
                   --iron-icon-seperator: {
                     padding-right: 80px;
                   }
+                  /* --oe-range-date: {
+                    margin: 0px;
+                    padding: 3px;
+                    background-color: #296969;
+                    opacity: 0.8;
+                  }
+                  --oe-start-date: {
+                    margin: 0px;
+                    padding: 3px;
+                    background-color: #296969;
+                    border-radius: 8px 0px 0px 8px;
+                  }
+                  --oe-end-date: {
+                    margin: 0px;
+                    padding: 3px;
+                    background-color: #296969;
+                    border-radius: 0px 8px 8px 0px;
+                  } */
+                 
                 }
               </style>
             </custom-style>
