added calendar button as input suffix

--- a/demo/demo-oe-date-range.html
+++ b/demo/demo-oe-date-range.html
@@ -58,6 +58,7 @@
           </style>
         </custom-style>
         <oe-date-range id='demo-1'></oe-date-range>
+        <oe-date-range id='demo-4' label="Range"></oe-date-range>
       </template>
     </demo-snippet>
 
