added min and max feature on oe-date-range

--- a/demo/demo-oe-date-range.html
+++ b/demo/demo-oe-date-range.html
@@ -57,8 +57,8 @@
             
           </style>
         </custom-style>
-        <oe-date-range id='demo-1'></oe-date-range>
-        <oe-date-range id='demo-4' label="Range"></oe-date-range>
+        <oe-date-range id='demo-1' format="YYYY-MM-DD" min="2020-07-13" max="2020-07-31"></oe-date-range>
+        <oe-date-range id='demo-4' label="Range" dropdown-mode></oe-date-range>
       </template>
     </demo-snippet>
 
