removed date-mixin imoprt,added parseshorthand()

--- a/demo/demo-oe-date-range.html
+++ b/demo/demo-oe-date-range.html
@@ -58,7 +58,7 @@
           </style>
         </custom-style>
         <oe-date-range id='demo-1' format="YYYY-MM-DD" min="2020-07-13" max="2020-07-31"></oe-date-range>
-        <oe-date-range id='demo-4' label="Range" dropdown-mode></oe-date-range>
+        <oe-date-range id='demo-4' format="DD-MMM-YYYY" label="Range" dropdown-mode></oe-date-range>
       </template>
     </demo-snippet>
 
@@ -72,7 +72,7 @@
           <style>
           </style>
         </custom-style>
-        <oe-date-range id='demo-2' label="Range"></oe-date-range>
+        <oe-date-range format="DD-MMM-YYYY" id='demo-2' label="Range"></oe-date-range>
       </template>
     </demo-snippet>
 
