--- a/demo/demo-oe-date-range.html
+++ b/demo/demo-oe-date-range.html
@@ -57,7 +57,7 @@
             
           </style>
         </custom-style>
-        <oe-date-range id='demo-1' format="YYYY-MM-DD" min="2020-07-13" max="2020-07-31"></oe-date-range>
+        <oe-date-range id='demo-1' label="Simple date range"></oe-date-range>
         <oe-date-range id='demo-4' format="DD-MMM-YYYY" label="Range" dropdown-mode></oe-date-range>
       </template>
     </demo-snippet>
